RESOLVED FIXED65532
Web Inspector: [JSC] //@ sourceURL is not respected.
https://bugs.webkit.org/show_bug.cgi?id=65532
Summary Web Inspector: [JSC] //@ sourceURL is not respected.
Pavel Feldman
Reported 2011-08-02 05:58:29 PDT
Type eval("window.ff = (function foo() { debugger; }) //@ sourceURL = foo.js") in console. Expected: new script in the debugger scripts drop down Actual: no scripts.
Attachments
Patch (6.69 KB, patch)
2012-01-12 08:40 PST, Pavel Podivilov
pfeldman: review+
Kris Kowal
Comment 1 2012-01-06 15:44:25 PST
I can confirm that this issues exists with Safari 5.1. This is an apt reduction of the general problem that programs using XHR+eval code loaders are not presently debuggable in Safari, but Chrome is fine. There are related comments here https://bugs.webkit.org/show_bug.cgi?id=57454
Kris Kowal
Comment 2 2012-01-11 13:16:24 PST
At https://bugs.webkit.org/show_bug.cgi?id=38662 > [sourceURL handling code] became dead when we stopped pushing script source to frontend to make loading faster. SourceURL values are now extracted on backend side by JS engine. It was implemented in V8 but not in JSC.
Patrick Mueller
Comment 3 2012-01-12 05:39:53 PST
It doesn't appear anyone is working on this. I have an interest, but could use some hints. First thing I'd need to do is to make sure this fixable in WebKit code (which I can fix) and not Safari code (which I can't). Then pointers to how to fix this would be useful, but I can likely figure it out myself if no one else knows.
Patrick Mueller
Comment 4 2012-01-12 07:46:17 PST
Got a Twitter message from tobie to not repeat the mistake found here, when implementing this. Not sure if it's appropriate or not, but figured I'd post it here just in case: http://code.google.com/p/chromium/issues/detail?id=109362
Pavel Podivilov
Comment 5 2012-01-12 08:40:49 PST
Yury Semikhatsky
Comment 6 2012-01-12 08:49:31 PST
Comment on attachment 122252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122252&action=review > Source/WebCore/bindings/js/ScriptDebugServer.cpp:240 > + script.url = ContentSearchUtils::findSourceURL(script.source); We may want to use it for both engines for consistency.
Pavel Podivilov
Comment 7 2012-01-12 09:07:29 PST
Note You need to log in before you can comment on or make changes to this bug.