Web Inspector: [JSC] //@ sourceURL is not respected. https://bugs.webkit.org/show_bug.cgi?id=65532

Reviewed by Pavel Feldman.

Source/WebCore:

Test: inspector/debugger/source-url-comment.html

* bindings/js/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::dispatchDidParseSource):
* inspector/ContentSearchUtils.cpp:
(WebCore::ContentSearchUtils::findMagicComment):
(WebCore::ContentSearchUtils::findSourceURL):
(WebCore::ContentSearchUtils::findSourceMapURL):
* inspector/ContentSearchUtils.h:

LayoutTests:

* inspector/debugger/source-url-comment-expected.txt: Added.
* inspector/debugger/source-url-comment.html: Added.

Canonical link: https://commits.webkit.org/92993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104831 268f45cc-cd09-0410-ab3c-d52691b4dbfc