Source/WebCore/inspector/ContentSearchUtils.h
@@ -44,6 +44,7 @@ RegularExpression createSearchRegex(const String& query, bool caseSensitive, boo
 int countRegularExpressionMatches(const RegularExpression&, const String&);
 PassRefPtr<InspectorArray> searchInTextByLines(const String& text, const String& query, const bool caseSensitive, const bool isRegex);
 
+String findSourceURL(const String& content);
 String findSourceMapURL(const String& content);
 
 } // namespace ContentSearchUtils
